changed testing to test split

--- a/samples/segmentation/inspect_segmentation_model.ipynb
+++ b/samples/segmentation/inspect_segmentation_model.ipynb
@@ -195,7 +195,7 @@
    "source": [
     "# Load validation dataset\n",
     "dataset = segmentation.SegmentationDataset()\n",
-    "dataset.load_dataset(SEGMENTATION_DIR, \"val\")\n",
+    "dataset.load_dataset(SEGMENTATION_DIR, \"test\")\n",
     "\n",
     "# Must call before using the dataset\n",
     "dataset.prepare()\n",
